[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/World/Tilemap/map_0.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/World/sub world/World_Right_2.gd" type="Script" id=3]
[ext_resource path="res://Assets/Animations/BattleFadeToNewRoom.tres" type="Animation" id=4]
[ext_resource path="res://Assets/Enviroment/Box.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Enviroment/Door_Dark_Mage.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Enviroment/Chest.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Enemy/World Enemy/World_Wood_Monster.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Actions/Door.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Enviroment/Thunder.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=1]
resource_name = "FadeToNewRoom"
length = 0.5
step = 0.05

[node name="World_Right_2" type="Node2D" groups=["ARROW", "BOMB", "BOX", "DOOR", "ENEMY", "MOVABLE", "PLAYER", "STATIC", "TILEMAP"]]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BattleFadeToNewRoom = ExtResource( 4 )
anims/FadeToNewRoom = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 9, 96 )

[node name="map_0" parent="." instance=ExtResource( 2 )]
collision_mask = 3
bake_navigation = false
tile_data = PoolIntArray( 0, 25, 0, 1, 25, 0, 2, 25, 0, 3, 25, 0, 4, 25, 0, 5, 25, 0, 6, 25, 0, 7, 25, 0, 8, 25, 0, 9, 25, 0, 10, 25, 0, 11, 74, 0, 12, 74, 0, 13, 25, 0, 65536, 25, 0, 65537, 25, 0, 65538, 25, 0, 65539, 25, 0, 65540, 41, 0, 65541, 41, 0, 65542, 25, 0, 65543, 25, 0, 65544, 25, 0, 65545, 41, 0, 65546, 41, 0, 65547, 41, 0, 65548, 74, 0, 65549, 25, 0, 131072, 25, 0, 131073, 25, 0, 131074, 25, 0, 131075, 25, 0, 131076, 41, 0, 131077, 41, 0, 131078, 25, 0, 131079, 41, 0, 131080, 41, 0, 131081, 41, 0, 131082, 41, 0, 131083, 74, 0, 131084, 74, 0, 131085, 25, 0, 196608, 25, 0, 196609, 41, 0, 196610, 41, 0, 196611, 25, 0, 196612, 41, 0, 196613, 41, 0, 196614, 25, 0, 196615, 41, 0, 196616, 41, 0, 196617, 41, 0, 196618, 41, 0, 196619, 41, 0, 196620, 74, 0, 196621, 25, 0, 262144, 25, 0, 262145, 41, 0, 262146, 41, 0, 262147, 41, 0, 262148, 41, 0, 262149, 41, 0, 262150, 41, 0, 262151, 41, 0, 262152, 41, 0, 262153, 41, 0, 262154, 41, 0, 262155, 41, 0, 262156, 74, 0, 262157, 25, 0, 327680, 74, 0, 327681, 74, 0, 327682, 41, 0, 327683, 41, 0, 327684, 41, 0, 327685, 41, 0, 327686, 41, 0, 327687, 41, 0, 327688, 41, 0, 327689, 41, 0, 327690, 41, 0, 327691, 41, 0, 327692, 74, 0, 327693, 25, 0, 393216, 74, 0, 393217, 74, 0, 393218, 74, 0, 393219, 41, 0, 393220, 41, 0, 393221, 41, 0, 393222, 41, 0, 393223, 41, 0, 393224, 41, 0, 393225, 41, 0, 393226, 41, 0, 393227, 41, 0, 393228, 41, 0, 393229, 25, 0, 458752, 25, 0, 458753, 41, 0, 458754, 41, 0, 458755, 41, 0, 458756, 41, 0, 458757, 41, 0, 458758, 41, 0, 458759, 41, 0, 458760, 41, 0, 458761, 536870953, 0, 458762, 536870953, 0, 458763, 536870953, 0, 458764, 41, 0, 458765, 25, 0, 524288, 25, 0, 524289, 25, 0, 524290, 536870937, 0, 524291, 536870937, 0, 524292, 536870937, 0, 524293, 536870937, 0, 524294, 536870937, 0, 524295, 536870937, 0, 524296, 536870937, 0, 524297, 536870937, 0, 524298, 536870937, 0, 524299, 536870937, 0, 524300, 25, 0, 524301, 25, 0 )

[node name="Enviroment_Entities" type="Node2D" parent="."]

[node name="Chest_Shield" parent="Enviroment_Entities" instance=ExtResource( 7 )]
position = Vector2( 80, 32 )
item = 3

[node name="Entities" type="Node2D" parent="."]

[node name="World_Wood_Monster_wr2_0" parent="Entities" instance=ExtResource( 9 )]
position = Vector2( 128, 44 )

[node name="World_Wood_Monster_wr2_1" parent="Entities" instance=ExtResource( 9 )]
position = Vector2( 186, 81 )

[node name="World_Wood_Monster_wr2_2" parent="Entities" instance=ExtResource( 9 )]
position = Vector2( 61, 115 )

[node name="Door_Dark_Mage" parent="." instance=ExtResource( 6 )]
position = Vector2( 80, 56 )

[node name="Boxs" type="Node2D" parent="."]

[node name="Box4" parent="Boxs" instance=ExtResource( 5 )]
position = Vector2( 150, 56 )

[node name="Box5" parent="Boxs" instance=ExtResource( 5 )]
position = Vector2( 85, 87 )

[node name="Points" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Points"]
position = Vector2( 135, 75 )

[node name="Position2D2" type="Position2D" parent="Points"]
position = Vector2( 170, 53 )

[node name="Position2D3" type="Position2D" parent="Points"]
position = Vector2( 61, 84 )

[node name="Position2D4" type="Position2D" parent="Points"]
position = Vector2( 95, 115 )

[node name="start_point" type="Position2D" parent="Points"]
position = Vector2( 118, 103 )

[node name="Position2D6" type="Position2D" parent="Points"]
position = Vector2( 156, 116 )

[node name="Position2D7" type="Position2D" parent="Points"]
position = Vector2( 195, 102 )

[node name="Door_World_Right_1" parent="." instance=ExtResource( 10 )]
position = Vector2( 9, 96 )
rotation = -1.5708
target_scene = "res://Assets/World/sub world/World_Right_1.tscn"
door_name = "Door_World_Right_2"

[node name="Door_World_Right_2" parent="." instance=ExtResource( 10 )]
position = Vector2( 192, 9 )
z_as_relative = false
target_scene = "res://Assets/World/sub world/World_Right_3.tscn"
door_name = "Door_World_Right_3"

[node name="Thunder" parent="." instance=ExtResource( 11 )]

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
